--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <a href="{{path('usuario_show_personal')}}">Mi usuario</a>
     <a href="{{path('usuario_edit_personal')}}">Editar Mi usuario</a>
-
+    <a href="{{path('app_register')}}">Registrar nuevo usuario</a>
     <table class="table">
         <thead>
             <tr>
