--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,9 +9,12 @@
         {{ form_start(registrationForm) }}
             {{ form_row(registrationForm.username) }}
             {{ form_row(registrationForm.plainPassword) }}
+            {{ form_row(registrationForm.apellido)}}
+            {{ form_row(registrationForm.nombre)}}
+            {{ form_row(registrationForm.dni)}}
             {{ form_row(registrationForm.agreeTerms) }}
 
-            <button class="btn">Crear usuario</button>
+            <button class="btn">{{botontext}}</button>
         {{ form_end(registrationForm) }}
     </div>
 {% endblock %}
