--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -22,7 +22,18 @@
 
     <a class="btn btn-primary" href="{{ path('usuarios_lista') }}">Volver a la lista de usuarios</a>
 
-    {# <a class="btn btn-primary" href="{{ path('usuario_edit', {'id': usuario.id}) }}">editar</a> #}
-    <a class="btn btn-primary" href="{{ path('usuario_edit_personal') }}">editar</a>
+    {% if is_granted('ROLE_MUNICIPIO') %}   
+        <a class="btn btn-primary" href="{{ path('usuario_edit', {'id': usuario.id}) }}">editar</a>
+    {% endif %}
+    {% if is_granted('ROLE_ADMIN') %}
+        <form method="post" action="{{ path('usuario_delete', {'id': usuario.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ usuario.id) }}">
+            <button class="btn">Eliminar</button>
+        </form>
+
+    {% endif %}
+    
+    {# <a class="btn btn-primary" href="{{ path('usuario_edit_personal') }}">editar</a> #}
 
 {% endblock %}
