--- a/templates/emprendimiento/new.html.twig
+++ b/templates/emprendimiento/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Emprendimiento{% endblock %}
+{% block title %}Nuevo Emprendimiento{% endblock %}
 {% block stylesheets %}
     <link rel="stylesheet" href="{{absolute_url('/assets/openlayers/ol.css')}}" type="text/css">
     <link rel="stylesheet" href="{{absolute_url('/assets/leaflet/leaflet.css')}}"/>
