--- a/templates/sectorproductivo/index.html.twig
+++ b/templates/sectorproductivo/index.html.twig
@@ -1,35 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Sectorproductivo index{% endblock %}
+{% block title %}Sectores Productivos{% endblock %}
 
 {% block body %}
-    <h1>Sectorproductivo index</h1>
+    <h1>Sectores Productivos</h1>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nombre</th>
-                <th>actions</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
         {% for sectorproductivo in sectorproductivos %}
             <tr>
-                <td>{{ sectorproductivo.id }}</td>
                 <td>{{ sectorproductivo.nombre }}</td>
                 <td>
-                    <a href="{{ path('sectorproductivo_show', {'id': sectorproductivo.id}) }}">show</a>
-                    <a href="{{ path('sectorproductivo_edit', {'id': sectorproductivo.id}) }}">edit</a>
+                    <a class="badge badge-primary" href="{{ path('sectorproductivo_show', {'id': sectorproductivo.id}) }}">Ver</a>
+                    <a class="badge badge-primary" href="{{ path('sectorproductivo_edit', {'id': sectorproductivo.id}) }}">Editar</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">No hay sectores registrados</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('sectorproductivo_new') }}">Create new</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('sectorproductivo_new') }}">Crear nuevo</a>
 {% endblock %}
