--- a/templates/ambito/edit.html.twig
+++ b/templates/ambito/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Ambito{% endblock %}
+{% block title %}Editar Ámbito{% endblock %}
 
 {% block body %}
-    <h1>Edit Ambito</h1>
+    <h1>Editar Ámbito</h1>
 
-    {{ include('ambito/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('ambito/_form.html.twig', {'button_label': 'Editar'}) }}
 
-    <a href="{{ path('ambito_index') }}">back to list</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('ambito_index') }}">Volver a lista</a>
 
     {{ include('ambito/_delete_form.html.twig') }}
 {% endblock %}
