--- a/templates/ambito/new.html.twig
+++ b/templates/ambito/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Ambito{% endblock %}
+{% block title %}Crear Ámbito{% endblock %}
 
 {% block body %}
-    <h1>Create new Ambito</h1>
+    <h1>Crear Ámbito</h1>
 
     {{ include('ambito/_form.html.twig') }}
 
-    <a href="{{ path('ambito_index') }}">back to list</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('ambito_index') }}">Volver a lista</a>
 {% endblock %}
