--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
                 {% endif %}
                 {% if is_granted('ROLE_MUNICIPIO') %}
                     <li class="nav-item">
-                    <a class="nav-link" href="{{path('estadosolicitud_index')}}">SolicitudesEstado</a>
+                    <a class="nav-link" href="{{path('estadosolicitud_index')}}">Estados</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="{{path('solicitud_index')}}">Solicitudes</a>
@@ -38,16 +38,21 @@
                     <li class="nav-item">
                     <a class="nav-link" href="{{path('usuarios_lista')}}">Usuarios</a>
                     </li>
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}                
                     <li class="nav-item">
                     <a class="nav-link" href="{{path('rubro_index')}}">Rubros</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{{path('ambito_index')}}">Ambitos</a>
+                    <a class="nav-link" href="{{path('ambito_index')}}">Ámbitos</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="{{path('sectorproductivo_index')}}">Sectores</a>
                     </li>
-                {% endif %}                
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{path('estadisticas')}}">Estadisticas</a>
+                <li>
                 <li class="nav-item">
                     {% if app.user %}
                         <a class="nav-link" href="{{path('app_logout')}}">Logout</a>
@@ -66,11 +71,11 @@
             </div>
         </div>
         </nav>
-        
+        <div class="container">
         {% block body %}
         
         {% endblock %}
-
+        </div>
         <!-- Footer -->
         <footer class="py-5 bg-dark">
             <div class="container">
