--- a/templates/estadosolicitud/_delete_form.html.twig
+++ b/templates/estadosolicitud/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('estadosolicitud_delete', {'id': estadosolicitud.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('estadosolicitud_delete', {'id': estadosolicitud.id}) }}" onsubmit="return confirm('Seguro que deseas eliminar este estado?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ estadosolicitud.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger btn-sm">Eliminar</button>
 </form>
