--- a/templates/estadosolicitud/edit.html.twig
+++ b/templates/estadosolicitud/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Estadosolicitud{% endblock %}
+{% block title %}Editar Estado de solicitud{% endblock %}
 
 {% block body %}
-    <h1>Edit Estadosolicitud</h1>
+    <h1>Editar Estado solicitud</h1>
 
-    {{ include('estadosolicitud/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('estadosolicitud/_form.html.twig', {'button_label': 'Editar'}) }}
 
-    <a href="{{ path('estadosolicitud_index') }}">back to list</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('estadosolicitud_index') }}">Volver a lista</a>
 
     {{ include('estadosolicitud/_delete_form.html.twig') }}
 {% endblock %}
