--- a/templates/estadosolicitud/index.html.twig
+++ b/templates/estadosolicitud/index.html.twig
@@ -1,35 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Estadosolicitud index{% endblock %}
+{% block title %}Lista de Estados{% endblock %}
 
 {% block body %}
-    <h1>Estadosolicitud index</h1>
-
+    <h1>Lista de Estados de solicitud</h1>
+    <a class="btn btn-primary btn-sm" href="{{ path('estadosolicitud_new') }}">Crear nuevo</a>
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nombre</th>
-                <th>actions</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
         {% for estadosolicitud in estadosolicituds %}
             <tr>
-                <td>{{ estadosolicitud.id }}</td>
                 <td>{{ estadosolicitud.nombre }}</td>
                 <td>
-                    <a href="{{ path('estadosolicitud_show', {'id': estadosolicitud.id}) }}">show</a>
-                    <a href="{{ path('estadosolicitud_edit', {'id': estadosolicitud.id}) }}">edit</a>
+                    <a class="badge badge-primary" href="{{ path('estadosolicitud_show', {'id': estadosolicitud.id}) }}">Ver</a>
+                    <a class="badge badge-primary" href="{{ path('estadosolicitud_edit', {'id': estadosolicitud.id}) }}">Editar</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">No hay estados disponibles</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('estadosolicitud_new') }}">Create new</a>
 {% endblock %}
