--- a/templates/registration/mi-edit.html.twig
+++ b/templates/registration/mi-edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Creación de usuarios{% endblock %}
+{% block title %}Editar Usuario{% endblock %}
 
 {% block body %}
     <h1>{{mensaje}}</h1>
@@ -13,7 +13,6 @@
             {{ form_row(registrationForm.nombre)}}
             {{ form_row(registrationForm.dni)}}
             {{ form_row(registrationForm.agreeTerms) }}
-            {{ form_row(registrationForm.roles)}}
             <button class="btn btn-primary btn-sm">{{botontext}}</button>
         {{ form_end(registrationForm) }}
     </div>
