--- a/templates/rubro/show.html.twig
+++ b/templates/rubro/show.html.twig
@@ -3,24 +3,24 @@
 {% block title %}Rubro{% endblock %}
 
 {% block body %}
-    <h1>Rubro</h1>
+    <h1>Rubro: {{rubro.tipo}}</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ rubro.id }}</td>
-            </tr>
-            <tr>
                 <th>Tipo</th>
                 <td>{{ rubro.tipo }}</td>
+            </tr>
+            <tr>
+                <th>Sector Productivo</th>
+                <td>{{ rubro.sector }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('rubro_index') }}">back to list</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('rubro_index') }}">Volver a lista</a>
 
-    <a href="{{ path('rubro_edit', {'id': rubro.id}) }}">edit</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('rubro_edit', {'id': rubro.id}) }}">Editar</a>
 
     {{ include('rubro/_delete_form.html.twig') }}
 {% endblock %}
