--- a/templates/sectorproductivo/new.html.twig
+++ b/templates/sectorproductivo/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Sectorproductivo{% endblock %}
+{% block title %}Nuevo Sector Productivo{% endblock %}
 
 {% block body %}
-    <h1>Create new Sectorproductivo</h1>
+    <h1>Crear nuevo sector productivo</h1>
 
     {{ include('sectorproductivo/_form.html.twig') }}
 
-    <a href="{{ path('sectorproductivo_index') }}">back to list</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('sectorproductivo_index') }}">Volver a lista</a>
 {% endblock %}
