--- a/templates/sectorproductivo/show.html.twig
+++ b/templates/sectorproductivo/show.html.twig
@@ -1,16 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Sectorproductivo{% endblock %}
+{% block title %}Sector Productivo{% endblock %}
 
 {% block body %}
-    <h1>Sectorproductivo</h1>
+    <h1>Sector Productivo: {{sectorproductivo.nombre}} </h1>
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ sectorproductivo.id }}</td>
-            </tr>
             <tr>
                 <th>Nombre</th>
                 <td>{{ sectorproductivo.nombre }}</td>
@@ -18,9 +14,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('sectorproductivo_index') }}">back to list</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('sectorproductivo_index') }}">Volver a lista</a>
 
-    <a href="{{ path('sectorproductivo_edit', {'id': sectorproductivo.id}) }}">edit</a>
+    <a class="btn btn-secondary btn-sm" href="{{ path('sectorproductivo_edit', {'id': sectorproductivo.id}) }}">Editar</a>
 
     {{ include('sectorproductivo/_delete_form.html.twig') }}
 {% endblock %}
