--- a/templates/solicitud/_form.html.twig
+++ b/templates/solicitud/_form.html.twig
@@ -7,5 +7,5 @@
     <div id="mapid"></div>
     </div>
     </center>
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-outline-primary">{{ button_label|default('Enviar') }}</button>
 {{ form_end(form) }}
