--- a/templates/solicitud/edit.html.twig
+++ b/templates/solicitud/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Solicitud{% endblock %}
+{% block title %}Editar Solicitud{% endblock %}
 
 {% block body %}
-    <h1>Edit Solicitud</h1>
+    <h1>Editar Solicitud</h1>
 
-    {{ include('solicitud/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('solicitud/_form.html.twig', {'button_label': 'Editar'}) }}
 
-    <a href="{{ path('solicitud_index') }}">back to list</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('solicitud_index') }}">Volver a lista</a>
 
     {{ include('solicitud/_delete_form.html.twig') }}
 {% endblock %}
