--- a/templates/solicitud/index.html.twig
+++ b/templates/solicitud/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>Solicitudes</h1>
-    <a href="{{ path('solicitud_new') }}">Crear nuevo</a>
+    <a class="btn btn-primary btn-sm" href="{{ path('solicitud_new') }}">Crear nueva solicitud</a>
 
     <table class="table">
         <thead>
@@ -19,7 +19,7 @@
                 <th>Titular Apellido</th>
                 <th>DNI</th>
                 <th>Estado</th>
-                <th>actions</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
@@ -36,13 +36,13 @@
                 <td>{{ solicitud.dni }}</td>
                 <td>{{ solicitud.estado }}</td>
                 <td>
-                    <a href="{{ path('solicitud_show', {'id': solicitud.id}) }}">show</a>
-                    <a href="{{ path('solicitud_edit', {'id': solicitud.id}) }}">edit</a>
+                    <a class="badge badge-primary" href="{{ path('solicitud_show', {'id': solicitud.id}) }}">Ver</a>
+                    <a class="badge badge-primary" href="{{ path('solicitud_edit', {'id': solicitud.id}) }}">Editar</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="14">no records found</td>
+                <td colspan="14">No se encontraron solicitudes</td>
             </tr>
         {% endfor %}
         </tbody>
